22thjune2023 initializing project

--- a/code/index.html
+++ b/code/index.html
@@ -1,23 +1,104 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <!-- Change the title below -->
-    <title>News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Retro gaming - magazine for retro gaming fans - trial project</title>
+    <link rel="stylesheet" href="./style.css">
+    <meta name="author" content="Frauke Schmidt">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600&family=Orbit&family=Press+Start+2P&family=Roboto+Mono:wght@300;400&display=swap"
+        rel="stylesheet">
+</head>
+
+<body>
     <header>
-      <!-- Some kind of logo and navbar -->
+        <img id="headerimage" src="../pics/logo/logo.png" alt="beautifull logo">
+        <ul>
+            <li>What</li>
+            <li>Who</li>
+            <li>Why</li>
+            <li>Contact</li>
+        </ul>
     </header>
+    <div id="news">
+        <div id="news_left">
+            <img src="../pics/top10.jpg">
+        </div>
+        <div id="news_right">
+            <h2>Ranking:</h2>
+            <p>All time favourite 10 most popular
+                retro games, elected by our users.</p>
+            <p id="poll_closed">Sorry guys, poll already closed.</p>
+            <button>read more ...</button>
+        </div>
+    </div>
+    <h3 id="heading_grid">Browse retro Games:</h3>
+    <div id="cardgrid">
+        <div>
+            <img src="../pics/grid/1.jpg" alt="Atomic Bomberman">
+            <p>Title: Atomic Bomberman</p>
+            <p>Genre: Arcade</p>
+        </div>
+        <div>
+            <img src="../pics/grid/2.jpg" alt="Descent">
+            <p>Title: Descent</p>
+            <p>Genre: 3D Shooter</p>
+        </div>
+        <div>
+            <img src="../pics/grid/3.jpg" alt="Giana Sisters">
+            <p>Title: Giana Sisters</p>
+            <p>Genre: Arcade</p>
+        </div>
+        <div>
+            <img src="../pics/grid/4.jpg" alt="Need for speed">
+            <p>Title: Need for Speed</p>
+            <p>Genre: Racing</p>
+        </div>
+        <div>
+            <img src="../pics/grid/5.jpg" alt="Pacman">
+            <p>Title: Pacman</p>
+            <p>Genre: Arcade</p>
+        </div>
+        <div>
+            <img src="../pics/grid/6.jpg" alt="Star Trek Elite Force">
+            <p>Title: Star Trek Elite Force</p>
+            <p>Genre: Shooter</p>
+        </div>
+        <div>
+            <img src="../pics/grid/7.jpg" alt="Unreal">
+            <p>Title: Unreal</p>
+            <p>Genre: Shooter</p>
+        </div>
+        <div>
+            <img src="../pics/grid/8.jpg" alt="Settlers">
+            <p>Title: The Settlers</p>
+            <p>Genre: Strategie</p>
+        </div>
+        <div>
+            <img src="../pics/grid/9.jpg" alt="Tron">
+            <p>Title: Tron 2.0</p>
+            <p>Genre: Shooter</p>
+        </div>
+        <div>
+            <img src="../pics/grid/10.jpg" alt="Railroad Tycoon">
+            <p>Title: Railroad Tycoon</p>
+            <p>Genre: Simulation</p>
+        </div>
+        <div>
+            <img src="../pics/grid/11.jpg" alt="Re-volt">
+            <p>Title: Re-volt</p>
+            <p>Genre: Racing</p>
+        </div>
+        <div>
+            <img src="../pics/grid/12.jpg" alt="Cultures">
+            <p>Title: Cultures</p>
+            <p>Genre: Strategie</p>
+        </div>
+    </div>
+</body>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
-
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
 </html>
