--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <header>
-        <img id="headerimage" src="../pics/logo/logo.png" alt="beautifull logo">
+        <img id="headerimage" src="./pics/logo/logo.png" alt="beautifull logo">
         <ul>
             <li>What</li>
             <li>Who</li>
@@ -26,7 +26,7 @@
     </header>
     <div id="news">
         <div id="news_left">
-            <img src="../pics/top10.jpg">
+            <img src="./pics/top10.jpg">
         </div>
         <div id="news_right">
             <h2>Ranking:</h2>
@@ -39,62 +39,62 @@
     <h3 id="heading_grid">Browse retro Games:</h3>
     <div id="cardgrid">
         <div>
-            <img src="../pics/grid/1.jpg" alt="Atomic Bomberman">
+            <img src="./pics/grid/1.jpg" alt="Atomic Bomberman">
             <p>Title: Atomic Bomberman</p>
             <p>Genre: Arcade</p>
         </div>
         <div>
-            <img src="../pics/grid/2.jpg" alt="Descent">
+            <img src="./pics/grid/2.jpg" alt="Descent">
             <p>Title: Descent</p>
             <p>Genre: 3D Shooter</p>
         </div>
         <div>
-            <img src="../pics/grid/3.jpg" alt="Giana Sisters">
+            <img src="./pics/grid/3.jpg" alt="Giana Sisters">
             <p>Title: Giana Sisters</p>
             <p>Genre: Arcade</p>
         </div>
         <div>
-            <img src="../pics/grid/4.jpg" alt="Need for speed">
+            <img src="./pics/grid/4.jpg" alt="Need for speed">
             <p>Title: Need for Speed</p>
             <p>Genre: Racing</p>
         </div>
         <div>
-            <img src="../pics/grid/5.jpg" alt="Pacman">
+            <img src="./pics/grid/5.jpg" alt="Pacman">
             <p>Title: Pacman</p>
             <p>Genre: Arcade</p>
         </div>
         <div>
-            <img src="../pics/grid/6.jpg" alt="Star Trek Elite Force">
+            <img src="./pics/grid/6.jpg" alt="Star Trek Elite Force">
             <p>Title: Star Trek Elite Force</p>
             <p>Genre: Shooter</p>
         </div>
         <div>
-            <img src="../pics/grid/7.jpg" alt="Unreal">
+            <img src="./pics/grid/7.jpg" alt="Unreal">
             <p>Title: Unreal</p>
             <p>Genre: Shooter</p>
         </div>
         <div>
-            <img src="../pics/grid/8.jpg" alt="Settlers">
+            <img src="./pics/grid/8.jpg" alt="Settlers">
             <p>Title: The Settlers</p>
             <p>Genre: Strategie</p>
         </div>
         <div>
-            <img src="../pics/grid/9.jpg" alt="Tron">
+            <img src="./pics/grid/9.jpg" alt="Tron">
             <p>Title: Tron 2.0</p>
             <p>Genre: Shooter</p>
         </div>
         <div>
-            <img src="../pics/grid/10.jpg" alt="Railroad Tycoon">
+            <img src="./pics/grid/10.jpg" alt="Railroad Tycoon">
             <p>Title: Railroad Tycoon</p>
             <p>Genre: Simulation</p>
         </div>
         <div>
-            <img src="../pics/grid/11.jpg" alt="Re-volt">
+            <img src="./pics/grid/11.jpg" alt="Re-volt">
             <p>Title: Re-volt</p>
             <p>Genre: Racing</p>
         </div>
         <div>
-            <img src="../pics/grid/12.jpg" alt="Cultures">
+            <img src="./pics/grid/12.jpg" alt="Cultures">
             <p>Title: Cultures</p>
             <p>Genre: Strategie</p>
         </div>
