22thjune2023 adapting mobile view

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <li>Why</li>
             <li>Contact</li>
         </ul>
+        <img id="hamburgermenu" src="./pics/menu.png" alt="hamburgermenu">
     </header>
     <div id="news">
         <div id="news_left">
