adding quest container

--- a/index.html
+++ b/index.html
@@ -37,69 +37,77 @@
             <button>read more ...</button>
         </div>
     </div>
-    <h3 id="heading_grid">Browse retro Games:</h3>
-    <div id="cardgrid">
-        <div>
-            <img src="./pics/grid/1.jpg" alt="Atomic Bomberman">
-            <p>Title: Atomic Bomberman</p>
-            <p>Genre: Arcade</p>
+    <section class="quest">
+        <h3>Quest</h3>
+        <p>On this page we hided three little cars like this:</p>
+        <img class="hidden_car" src="pics/gamingpics/car.png" alt="hidden car">
+        <p>Can you find them? Just hover over them or click and they become visible.</p>
+    </section>
+    <section>
+        <h3>Browse retro Games:</h3>
+        <div id="cardgrid">
+            <div>
+                <img src="./pics/grid/1.jpg" alt="Atomic Bomberman">
+                <p>Title: Atomic Bomberman</p>
+                <p>Genre: Arcade</p>
+            </div>
+            <div>
+                <img src="./pics/grid/2.jpg" alt="Descent">
+                <p>Title: Descent</p>
+                <p>Genre: 3D Shooter</p>
+            </div>
+            <div>
+                <img src="./pics/grid/3.jpg" alt="Giana Sisters">
+                <p>Title: Giana Sisters</p>
+                <p>Genre: Arcade</p>
+            </div>
+            <div>
+                <img src="./pics/grid/4.jpg" alt="Need for speed">
+                <p>Title: Need for Speed</p>
+                <p>Genre: Racing</p>
+            </div>
+            <div>
+                <img src="./pics/grid/5.jpg" alt="Pacman">
+                <p>Title: Pacman</p>
+                <p>Genre: Arcade</p>
+            </div>
+            <div>
+                <img src="./pics/grid/6.jpg" alt="Star Trek Elite Force">
+                <p>Title: Star Trek Elite Force</p>
+                <p>Genre: Shooter</p>
+            </div>
+            <div>
+                <img src="./pics/grid/7.jpg" alt="Unreal">
+                <p>Title: Unreal</p>
+                <p>Genre: Shooter</p>
+            </div>
+            <div>
+                <img src="./pics/grid/8.jpg" alt="Settlers">
+                <p>Title: The Settlers</p>
+                <p>Genre: Strategie</p>
+            </div>
+            <div>
+                <img src="./pics/grid/9.jpg" alt="Tron">
+                <p>Title: Tron 2.0</p>
+                <p>Genre: Shooter</p>
+            </div>
+            <div>
+                <img src="./pics/grid/10.jpg" alt="Railroad Tycoon">
+                <p>Title: Railroad Tycoon</p>
+                <p>Genre: Simulation</p>
+            </div>
+            <div>
+                <img src="./pics/grid/11.jpg" alt="Re-volt">
+                <p>Title: Re-volt</p>
+                <p>Genre: Racing</p>
+            </div>
+            <div>
+                <img src="./pics/grid/12.jpg" alt="Cultures">
+                <p>Title: Cultures</p>
+                <p>Genre: Strategie</p>
+            </div>
         </div>
-        <div>
-            <img src="./pics/grid/2.jpg" alt="Descent">
-            <p>Title: Descent</p>
-            <p>Genre: 3D Shooter</p>
-        </div>
-        <div>
-            <img src="./pics/grid/3.jpg" alt="Giana Sisters">
-            <p>Title: Giana Sisters</p>
-            <p>Genre: Arcade</p>
-        </div>
-        <div>
-            <img src="./pics/grid/4.jpg" alt="Need for speed">
-            <p>Title: Need for Speed</p>
-            <p>Genre: Racing</p>
-        </div>
-        <div>
-            <img src="./pics/grid/5.jpg" alt="Pacman">
-            <p>Title: Pacman</p>
-            <p>Genre: Arcade</p>
-        </div>
-        <div>
-            <img src="./pics/grid/6.jpg" alt="Star Trek Elite Force">
-            <p>Title: Star Trek Elite Force</p>
-            <p>Genre: Shooter</p>
-        </div>
-        <div>
-            <img src="./pics/grid/7.jpg" alt="Unreal">
-            <p>Title: Unreal</p>
-            <p>Genre: Shooter</p>
-        </div>
-        <div>
-            <img src="./pics/grid/8.jpg" alt="Settlers">
-            <p>Title: The Settlers</p>
-            <p>Genre: Strategie</p>
-        </div>
-        <div>
-            <img src="./pics/grid/9.jpg" alt="Tron">
-            <p>Title: Tron 2.0</p>
-            <p>Genre: Shooter</p>
-        </div>
-        <div>
-            <img src="./pics/grid/10.jpg" alt="Railroad Tycoon">
-            <p>Title: Railroad Tycoon</p>
-            <p>Genre: Simulation</p>
-        </div>
-        <div>
-            <img src="./pics/grid/11.jpg" alt="Re-volt">
-            <p>Title: Re-volt</p>
-            <p>Genre: Racing</p>
-        </div>
-        <div>
-            <img src="./pics/grid/12.jpg" alt="Cultures">
-            <p>Title: Cultures</p>
-            <p>Genre: Strategie</p>
-        </div>
-    </div>
+    </section>
 </body>
 
 </html>
