working on bonustask, hiding cars on page

--- a/index.html
+++ b/index.html
@@ -35,13 +35,15 @@
                 retro games, elected by our users.</p>
             <p id="poll_closed">Sorry guys, poll already closed.</p>
             <button>read more ...</button>
+            <span class="car1anchor"><img class="car1" src="pics/gamingpics/car1.png" alt="car1"></span>
         </div>
     </div>
     <section class="quest">
         <h3>Quest</h3>
         <p>On this page we hided three little cars like this:</p>
-        <img class="hidden_car" src="pics/gamingpics/car.png" alt="hidden car">
+        <img class="hidden_car_sample" src="pics/gamingpics/car.png" alt="hidden car">
         <p>Can you find them? Just hover over them or click and they become visible.</p>
+        <p>Not ready yet, Bonustask.</p>
     </section>
     <section>
         <h3>Browse retro Games:</h3>
