hiding 3 little cars

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <img class="car3" src="pics/gamingpics/car3.png" alt="hidden car3">
     <header>
         <img id="headerimage" src="./pics/logo/logo.png" alt="beautifull logo">
         <ul>
@@ -58,10 +59,11 @@
                 <p>Title: Descent</p>
                 <p>Genre: 3D Shooter</p>
             </div>
-            <div>
+            <div class="car2anchor">
                 <img src="./pics/grid/3.jpg" alt="Giana Sisters">
                 <p>Title: Giana Sisters</p>
                 <p>Genre: Arcade</p>
+                <img class="car2" src="pics/gamingpics/car2.png" alt="car2">
             </div>
             <div>
                 <img src="./pics/grid/4.jpg" alt="Need for speed">
