--- a/index.html
+++ b/index.html
@@ -111,6 +111,13 @@
             </div>
         </div>
     </section>
+    <footer>
+        <div id="footerdiv">
+            <p>First project at programming school Technigo. <a
+                    href="https://github.com/colognia/Technigo-project1-news-site">Github.</a></p>
+            <p>Coded by <a href="https://www.linkedin.com/in/frauke-s-395242201/">Frauke Schmidt</a>.</p>
+        </div>
+    </footer>
 </body>
 
 </html>
