--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
 </head>
 
 <body>
-    <img class="car3" src="pics/gamingpics/car3.png" alt="hidden car3">
+
     <header>
-        <img id="headerimage" src="./pics/logo/logo.png" alt="beautifull logo">
+        <div class="logodiv">
+            <img id="headerimage" src="./pics/logo/logo.png" alt="beautifull logo">
+            <img class="car3" src="pics/gamingpics/car3.png" alt="hidden car3">
+        </div>
         <ul>
             <li>What</li>
             <li>Who</li>
@@ -47,7 +50,7 @@
     </section>
     <section>
         <h3>Browse retro Games:</h3>
-        <div id="cardgrid">
+        <div class="cardgrid">
             <div>
                 <img src="./pics/grid/1.jpg" alt="Atomic Bomberman">
                 <p>Title: Atomic Bomberman</p>
