--- a/code/index.html
+++ b/code/index.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <!-- Change the title below -->
-    <title>News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Villa Vibes</title>
+  <link rel="stylesheet" href="./style.css" />
+</head>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
+<body>
+  <header>
+    <div>
+      <img src="/images/villa-vibes-logo.svg" alt="The Villa Vibes Logo">
+      <h1>Villa Vibes</h1>
+    </div>
+  </header>
+
+  <section class="big-news">
+    <!-- The big news content -->
+  </section>
+
+  <section class="">
+    <!-- The other news  -->
+  </section>
+</body>
+
 </html>
