added a lot of html, and more pictures

--- a/code/index.html
+++ b/code/index.html
@@ -9,15 +9,81 @@
 </head>
 
 <body>
-  <header>
-    <div>
-      <img src="/images/villa-vibes-logo.svg" alt="The Villa Vibes Logo">
-      <h1>Villa Vibes</h1>
+  <header class="navbar">
+    <div class="logo">
+      <h1>
+        <img src="/images/villa-vibes-logo.svg" alt="The Villa Vibes Logo">
+      </h1>
     </div>
+    <nav class="links">
+      <a href="#latest-news">Latest news</a>
+      <a href="#recents">Recents</a>
+      <a href="#most-read">Most read</a>
+    </nav>
   </header>
 
-  <section class="big-news">
-    <!-- The big news content -->
+  <section class="latest-news" id="latest-news">
+    <h2>Latest news</h2>
+    <article>
+      <div>
+        <img src="/images/garden-image.jpg" alt="Image of someone watering a plant">
+      </div>
+      <div>
+        <h3>Nature's Enchanted Haven Unveiled: Majestic Landscaping Transformation
+        </h3>
+        <p>
+          Prepare to be mesmerized by the breathtaking results of a transformative landscaping project. Majestic trees,
+          vibrant blooms, and sparkling fountains create a serene oasis. Explore hidden treasures and a dedicated
+          children's play area. Step into a realm of natural splendor and embrace the enchantment.</p>
+      </div>
+    </article>
+  </section>
+
+  <section class="recents" id="recents">
+    <h2>Recents</h2>
+    <article>
+      <div>
+        <img src="/images/gardener.jpg" alt="Image of a gardener">
+        <h3>Plant Heist: Renowned Gardener's Prized Collection Vanished
+        </h3>
+      </div>
+      <div>
+        <img src="/images/fire.jpg" alt="Image of a fire">
+        <h3>Garden Inferno: Iconic Villa Paradise Reduced to Ashes!
+        </h3>
+      </div>
+      <div>
+        <img src="/images/underground.jpg" alt="Image of people digging in the ground">
+        <h3>Hidden Oasis Unveiled: Astonishing Discovery Beneath Famous Villa!
+        </h3>
+      </div>
+    </article>
+  </section>
+
+  <section class="most-read" id="most-read">
+    <h2>Most read</h2>
+    <article>
+      <div>
+        <img src="/images/retreat.jpg" alt="Image of a garden retreat">
+      </div>
+      <div>
+        <h3>From Neglect to Serene Oasis: A Yard Transformed into a Stunning Garden Retreat
+        </h3>
+        <p>
+          In Willowdale, a neglected yard has undergone a remarkable transformation, becoming a breathtaking garden
+          oasis thanks to the passion and vision of local landscapers, Jane and Mark Anderson.</p>
+      </div>
+      <div>
+        <img src="/images/furniture.jpg" alt="Image of furniture in a livingroom">
+      </div>
+      <div>
+        <h3>Exploring Interior Design Trends: From Vibrant Colors to Innovative Furniture
+        </h3>
+        <p>
+          Villa Vibes takes a closer look at the latest trends in interior design, from bold color palettes to
+          innovative furniture designs that are revolutionizing home decor.</p>
+      </div>
+    </article>
   </section>
 
   <section class="">
