--- a/code/index.html
+++ b/code/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <!-- Change the title below -->
   <title>Dogs</title>
-  <link rel="stylesheet" href="./style.css" />
+  <link rel="stylesheet" type="text/CSS" href="./style.css" />
   <!-- dont forget the meta tag for responsiveness -->
 </head>
 
@@ -15,7 +15,9 @@
     <a href="#">
       <img src="https://cdn.pixabay.com/photo/2015/07/09/19/32/dog-838281_1280.jpg">
     </a>
-    <h1 id="my site name">DOGS - All you need to know</h1>
+
+    <h1>DOGS - Just wanna have fun</h1>
+
     <nav>
       <ul>
         <li><a href="#Link">Link</a></li>
@@ -24,75 +26,110 @@
         <li><a href="#Contact" title="Click here for contact">Contact</a></li>
       </ul>
     </nav>
+
   </header>
 
   <main>
     <section class="big-news">
       <!-- The big news content -->
-      <img src="https://cdn.pixabay.com/photo/2017/12/27/14/02/friends-3042751_1280.jpg"
-        alt="Dog and human in nature" />
-      <h2>Oldest dog alive</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat.</p>
+      <a href="#">
+        <div class="grid-item big news photo">
+          <img src="https://cdn.pixabay.com/photo/2017/12/27/14/02/friends-3042751_1280.jpg"
+            alt="Dog and human in nature" />
+        </div>
+
+        <div class="grid-item big news text">
+          <h2>Oldest dog alive</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore
+            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+            commodo
+            consequat.</p>
+        </div>
+      </a>
     </section>
 
-    <section class="other news">
+    <section class="other-news">
       <!-- The other news  -->
-      <a href="#"> <img src="https://cdn.pixabay.com/photo/2013/10/02/23/03/dog-190056_1280.jpg">
-        <h3>News 1</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. </p>
-      </a>
+      <div class="grid-item news one">
+        <a href="#">
+          <h3>1 Lovely hikes</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore
+            magna aliqua. </p>
+          <img src="https://cdn.pixabay.com/photo/2013/10/02/23/03/dog-190056_1280.jpg">
+        </a>
+      </div>
 
-      <a href="#">
-        <img src="https://cdn.pixabay.com/photo/2016/02/26/16/32/bulldog-1224267_1280.jpg">
-        <h3>News 2</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. </p>
-      </a>
+      <div class="grid-item news two">
+        <a href="#">
+          <h3>2 Lovely sleep</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore
+            magna aliqua. </p>
+          <img src="https://cdn.pixabay.com/photo/2016/02/26/16/32/bulldog-1224267_1280.jpg">
+        </a>
+      </div>
 
-      <a href="#">
-        <img src="https://cdn.pixabay.com/photo/2016/05/25/11/25/dog-1414524_1280.jpg">
-        <h3>News 3</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. </p>
-      </a>
+      <div class="grid-item news three">
+        <a href="#">
+          <h3>3 Lovely food</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore
+            magna aliqua. </p>
+          <img src="https://cdn.pixabay.com/photo/2016/05/25/11/25/dog-1414524_1280.jpg">
+        </a>
+      </div>
 
-      <a href="#">
-        <img src="https://cdn.pixabay.com/photo/2015/05/28/15/24/malinois-and-border-collie-788032_1280.jpg">
-        <h3>News 4</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. </p>
-      </a>
+      <div class="grid-item news four">
+        <a href="#">
+          <h3>4 Lovely toys</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore
+            magna aliqua. </p>
+          <img src="https://cdn.pixabay.com/photo/2015/05/28/15/24/malinois-and-border-collie-788032_1280.jpg">
+        </a>
+      </div>
 
-      <a href="#">
-        <img src="https://cdn.pixabay.com/photo/2015/03/14/04/23/border-collie-672696_1280.jpg">
-        <h3>News 5</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. </p>
-      </a>
+      <div class="grid-item news five">
+        <a href="#">
+          <h3>5 Lovely friends</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore
+            magna aliqua. </p>
+          <img src="https://cdn.pixabay.com/photo/2015/03/14/04/23/border-collie-672696_1280.jpg">
+        </a>
+      </div>
 
-      <a href="#">
-        <img src="https://cdn.pixabay.com/photo/2016/07/29/09/30/dog-1551692_1280.jpg">
-        <h3>News 6</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. </p>
-      </a>
+      <div class="grid-item news six">
+        <a href="#">
+          <h3>6 Lovely baths</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore
+            magna aliqua. </p>
+          <img src="https://cdn.pixabay.com/photo/2016/07/29/09/30/dog-1551692_1280.jpg">
+        </a>
+      </div>
 
-      <a href="#">
-        <img src="https://cdn.pixabay.com/photo/2016/05/23/22/06/dog-1411396_1280.jpg">
-        <h3>News 7</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. </p>
-      </a>
+      <div class="grid-item news seven">
+        <a href="#">
+          <h3>7 Lovely water games</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore
+            magna aliqua. </p>
+          <img src="https://cdn.pixabay.com/photo/2016/05/23/22/06/dog-1411396_1280.jpg">
+        </a>
+      </div>
 
-      <a href="#">
-        <img src="https://cdn.pixabay.com/photo/2016/05/23/22/05/dog-1411393_1280.jpg">
-        <h3>News 8</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. </p>
-      </a>
+      <div class="grid-item news eight">
+        <a href="#">
+          <h3>8 More water</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore
+            magna aliqua. </p>
+          <img src="https://cdn.pixabay.com/photo/2016/05/23/22/05/dog-1411393_1280.jpg">
+        </a>
+      </div>
     </section>
   </main>
 
