--- a/code/index.html
+++ b/code/index.html
@@ -3,21 +3,55 @@
   <head>
     <meta charset="utf-8" />
     <!-- Change the title below -->
-    <title>News Site</title>
+    <title>Berlin, Berlin</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
     <header>
+      <nav>
+        <div>img</div>
+        <ul class="nav-lists">
+          <li class="nav-list">History</li>
+          <li class="nav-list">Museum</li>
+          <li class="nav-list">Art</li>
+          <li class="nav-list">Clubs</li>
+          <li class="nav-list">Cafe</li>
+        </ul>
+      </nav>
       <!-- Some kind of logo and navbar -->
     </header>
 
+    <main>
+
     <section class="big-news">
-      <!-- The big news content -->
+     <div class="about-container">
+      <img src="" alt="">
+      <h1>Hello</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis vel alias, libero quibusdam vero saepe quo. Harum voluptate enim modi eaque nam debitis ipsam! Suscipit provident ipsum nemo consectetur eius.</p>
+     </div>
     </section>
 
-    <section class="">
-      <!-- The other news  -->
+    <section class="grid">
+    <div class="grid-child"><img/><h2></h2></div>
+    <div class="grid-child"><img/><h2></h2></div>
+    <div class="grid-child"><img/><h2></h2></div>
+    <div class="grid-child"><img/><h2></h2></div>
+    <div class="grid-child"><img/><h2></h2></div>
+    <div class="grid-child"><img/><h2></h2></div>
+    <div class="grid-child"><img/><h2></h2></div>
+    <div class="grid-child"><img/><h2></h2></div>
+    <div class="grid-child"><img/><h2></h2></div>
+    <div class="grid-child"><img/><h2></h2></div>
+    <div class="grid-child"><img/><h2></h2></div>
+    <div class="grid-child"><img/><h2></h2></div>
+    <div class="grid-child"><img/><h2></h2></div>
+    <div class="grid-child"><img/><h2></h2></div>
+    <div class="grid-child"><img/><h2></h2></div>
+    <div class="grid-child"><img/><h2></h2></div>
+    <div class="grid-child"><img/><h2></h2></div>
     </section>
+
+  </main>
   </body>
 </html>
