change path of logo

--- a/code/index.html
+++ b/code/index.html
@@ -10,7 +10,7 @@
     <!--Header part: logo,sitename,navbar-->
     <header>
         <div class="logo" >
-        <img src="./pics/logoCraft.svg" alt="logo">
+        <img src="./logoCraft.svg" alt="logo">
         </div>
         <div class="sitename" >
             <h1>Crafts</h1>
