--- a/code/index.html
+++ b/code/index.html
@@ -3,7 +3,6 @@
 
 <head>
   <meta charset="utf-8" />
-  <!-- Change the title below -->
   <title>Dogs</title>
   <link rel="stylesheet" type="text/CSS" href="./style.css" />
   <!-- dont forget the meta tag for responsiveness -->
@@ -11,17 +10,19 @@
 
 <body>
   <header>
-    <!-- Some kind of logo and navbar -->
-    <a href="#">
-      <img src="https://cdn.pixabay.com/photo/2015/07/09/19/32/dog-838281_1280.jpg">
-    </a>
+    <div class="logo">
+      <a href="#">
+        <img src="https://cdn.pixabay.com/photo/2015/07/09/19/32/dog-838281_1280.jpg">
+      </a>
+    </div>
 
-    <h1>DOGS - Just wanna have fun</h1>
+    <div class="header-text">
+      <h1>DOGS</h1>
+    </div>
 
     <nav>
       <ul>
-        <li><a href="#Link">Link</a></li>
-        <li><a href="#Link">Link</a></li>
+        <li><a href="#Link">News</a></li>
         <li><a href="#About">About</a></li>
         <li><a href="#Contact" title="Click here for contact">Contact</a></li>
       </ul>
@@ -31,110 +32,118 @@
 
   <main>
     <section class="big-news">
-      <!-- The big news content -->
-      <a href="#">
-        <div class="grid-item big news photo">
+      <div class="big-news-image">
+        <a href="#">
           <img src="https://cdn.pixabay.com/photo/2017/12/27/14/02/friends-3042751_1280.jpg"
-            alt="Dog and human in nature" />
-        </div>
-
-        <div class="grid-item big news text">
+            alt="Dog and human in nature" class="photo">
+        </a>
+      </div>
+      </div>
+      <div class="big-news-textbox">
+        <a href="#">
           <h2>Oldest dog alive</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            incididunt ut labore et
+            dolore
+            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+            commodo
+            consequat.<br><br>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            incididunt ut labore et
             dolore
             magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
             commodo
             consequat.</p>
-        </div>
-      </a>
+        </a>
+      </div>
     </section>
 
     <section class="other-news">
-      <!-- The other news  -->
       <div class="grid-item news one">
         <a href="#">
-          <h3>1 Lovely hikes</h3>
+          <h3>Lovely hikes</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore
             magna aliqua. </p>
-          <img src="https://cdn.pixabay.com/photo/2013/10/02/23/03/dog-190056_1280.jpg">
+          <img src="https://cdn.pixabay.com/photo/2013/10/02/23/03/dog-190056_1280.jpg" class="photo">
         </a>
       </div>
 
       <div class="grid-item news two">
         <a href="#">
-          <h3>2 Lovely sleep</h3>
+          <h3>Lovely sleep</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore
             magna aliqua. </p>
-          <img src="https://cdn.pixabay.com/photo/2016/02/26/16/32/bulldog-1224267_1280.jpg">
+          <img src="https://cdn.pixabay.com/photo/2016/02/26/16/32/bulldog-1224267_1280.jpg" class="photo">
         </a>
       </div>
 
       <div class="grid-item news three">
         <a href="#">
-          <h3>3 Lovely food</h3>
+          <h3>Lovely food</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore
             magna aliqua. </p>
-          <img src="https://cdn.pixabay.com/photo/2016/05/25/11/25/dog-1414524_1280.jpg">
+          <img src="https://cdn.pixabay.com/photo/2017/09/21/09/33/dog-2771274_1280.jpg" class="photo">
         </a>
       </div>
 
       <div class="grid-item news four">
         <a href="#">
-          <h3>4 Lovely toys</h3>
+          <h3>Lovely toys</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore
             magna aliqua. </p>
-          <img src="https://cdn.pixabay.com/photo/2015/05/28/15/24/malinois-and-border-collie-788032_1280.jpg">
+          <img src="https://cdn.pixabay.com/photo/2016/08/01/13/13/dog-1561011_1280.jpg" class="photo">
         </a>
       </div>
 
       <div class="grid-item news five">
         <a href="#">
-          <h3>5 Lovely friends</h3>
+          <h3>Lovely friends</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore
             magna aliqua. </p>
-          <img src="https://cdn.pixabay.com/photo/2015/03/14/04/23/border-collie-672696_1280.jpg">
+          <img src="https://cdn.pixabay.com/photo/2015/05/28/15/24/malinois-and-border-collie-788032_1280.jpg"
+            class="photo">
         </a>
       </div>
 
       <div class="grid-item news six">
         <a href="#">
-          <h3>6 Lovely baths</h3>
+          <h3>Lovely baths</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore
             magna aliqua. </p>
-          <img src="https://cdn.pixabay.com/photo/2016/07/29/09/30/dog-1551692_1280.jpg">
+          <img src="https://cdn.pixabay.com/photo/2022/06/20/16/51/dog-7274203_1280.jpg" class="photo">
         </a>
       </div>
 
       <div class="grid-item news seven">
         <a href="#">
-          <h3>7 Lovely water games</h3>
+          <h3>Lovely drinks</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore
             magna aliqua. </p>
-          <img src="https://cdn.pixabay.com/photo/2016/05/23/22/06/dog-1411396_1280.jpg">
+          <img src="https://cdn.pixabay.com/photo/2017/11/27/22/52/dog-2982426_1280.jpg" class="photo">
         </a>
       </div>
 
       <div class="grid-item news eight">
         <a href="#">
-          <h3>8 More water</h3>
+          <h3>More water</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore
             magna aliqua. </p>
-          <img src="https://cdn.pixabay.com/photo/2016/05/23/22/05/dog-1411393_1280.jpg">
+          <img src="https://cdn.pixabay.com/photo/2022/06/12/15/20/golden-retriever-7258225_1280.jpg" class="photo">
         </a>
       </div>
     </section>
   </main>
 
   <footer>
-    <p>DOGS - all you need to know. All rights reserved</p>
+    <p>DOGS - Just wanna have fun. All rights reserved. These news are written for dogs.</p>
   </footer>
 
 </body>
