more feature added

--- a/code/index.html
+++ b/code/index.html
@@ -5,12 +5,19 @@
     <!-- Change the title below -->
     <title>Berlin, Berlin</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cherry+Cream+Soda&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
     <header>
       <nav>
-        <div>img</div>
+        <div><h1>Belin, Belin</h1></div>
         <ul class="nav-lists">
           <li class="nav-list">History</li>
           <li class="nav-list">Museum</li>
@@ -19,6 +26,7 @@
           <li class="nav-list">Cafe</li>
         </ul>
       </nav>
+      <div class="nav-under">Berlin, Berlin</div>
       <!-- Some kind of logo and navbar -->
     </header>
 
@@ -26,30 +34,20 @@
 
     <section class="big-news">
      <div class="about-container">
-      <img src="" alt="">
-      <h1>Hello</h1>
+      <img src="./images/berlinwall.webp" alt="" class="berlin-wall-img">
+      <div class="text-box">
+      <h2>Hello</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis vel alias, libero quibusdam vero saepe quo. Harum voluptate enim modi eaque nam debitis ipsam! Suscipit provident ipsum nemo consectetur eius.</p>
      </div>
+    </div>
     </section>
-
+<h2 class="secondary-heading">News</h2>
     <section class="grid">
-    <div class="grid-child"><img/><h2></h2></div>
-    <div class="grid-child"><img/><h2></h2></div>
-    <div class="grid-child"><img/><h2></h2></div>
-    <div class="grid-child"><img/><h2></h2></div>
-    <div class="grid-child"><img/><h2></h2></div>
-    <div class="grid-child"><img/><h2></h2></div>
-    <div class="grid-child"><img/><h2></h2></div>
-    <div class="grid-child"><img/><h2></h2></div>
-    <div class="grid-child"><img/><h2></h2></div>
-    <div class="grid-child"><img/><h2></h2></div>
-    <div class="grid-child"><img/><h2></h2></div>
-    <div class="grid-child"><img/><h2></h2></div>
-    <div class="grid-child"><img/><h2></h2></div>
-    <div class="grid-child"><img/><h2></h2></div>
-    <div class="grid-child"><img/><h2></h2></div>
-    <div class="grid-child"><img/><h2></h2></div>
-    <div class="grid-child"><img/><h2></h2></div>
+    <div class="grid-child"><img src="./images/art/kinga.jpg" alt="image of Kinga's art work"/><h2>Mythical Forest: An Interview with Kinga Kiełczyńska</h2></div>
+    <div class="grid-child"><img src="./images/art/kinga.jpg" alt="image of Kinga's art work"/><h2>Mythical Forest: An Interview with Kinga Kiełczyńska</h2></div>
+    <div class="grid-child"><img src="./images/art/kinga.jpg" alt="image of Kinga's art work"/><h2>Mythical Forest: An Interview with Kinga Kiełczyńska</h2></div>
+    <div class="grid-child"><img src="./images/art/kinga.jpg" alt="image of Kinga's art work"/><h2>Mythical Forest: An Interview with Kinga Kiełczyńska</h2></div>
+    
     </section>
 
   </main>
