additional container to limit width of header on large screens

--- a/index.html
+++ b/index.html
@@ -17,17 +17,19 @@
 <body>
 
     <header>
-        <div class="logodiv">
-            <img id="headerimage" src="./pics/logo/logo.png" alt="beautifull logo">
-            <img class="car3" src="pics/gamingpics/car3.png" alt="hidden car3">
+        <div class="headercontainer">
+            <div class="logodiv">
+                <img id="headerimage" src="./pics/logo/logo.png" alt="beautifull logo">
+                <img class="car3" src="pics/gamingpics/car3.png" alt="hidden car3">
+            </div>
+            <ul>
+                <li>What</li>
+                <li>Who</li>
+                <li>Why</li>
+                <li>Contact</li>
+            </ul>
+            <img id="hamburgermenu" src="./pics/menu.png" alt="hamburgermenu">
         </div>
-        <ul>
-            <li>What</li>
-            <li>Who</li>
-            <li>Why</li>
-            <li>Contact</li>
-        </ul>
-        <img id="hamburgermenu" src="./pics/menu.png" alt="hamburgermenu">
     </header>
     <div id="news">
         <div id="news_left">
