change html tag and media queries of min-width 1024

--- a/code/index.html
+++ b/code/index.html
@@ -30,19 +30,19 @@
     <!-- Main part:Bigpicture Part,Discover more info -->
     <main>
     <!-- BigPicture Part -->
-    <div class="bigpic_container">
+    <section class="bigpic_container">
         <div class="Bigpic">
-            <img  src="./pics/picture.png" alt="BigPicture">
+            <img src="./pics/picture.png" alt="BigPicture">
         </div>
         <div class="main_info">
         <h2>Knitting is as Simple as 1, 2, 3</h2>
-        <p>Knitting boils down to three essential skills. These are the cast on, knit stitch, and the cast off. These three techniques make up the backbone of knitting. Master them and you’re officially a knitter. It’s that simple!</p>
+        <p>Knitting boils down to three essential skills. These are the cast on, knit stitch, and the cast off.hese three techniques make up the backbone of knitting.To Master them and you’re officially a knitter. It’s that simple!</p> 
         <button type="button" class="read_it_more" onclick="click">Read it more
         </button>
         </div>
-    </div>
+    </section>
     <!--Discover more info-->
-    <div class="container">
+    <section class="container">
         <!-- The first grid row  -->
         <div class="picture">
         <a class="item" href="#" >
@@ -107,7 +107,7 @@
         </a>
         <p>Malatang is a popular street food in China that is very similar to hot pot.</p>
     </div>
-    </div>  
+    </section>  
 
 </main>
     <footer>
