added mobile first, responsiveness

--- a/code/index.html
+++ b/code/index.html
@@ -2,10 +2,11 @@
 <html>
 
 <head>
-  <meta charset="utf-8" />
-  <title>Dogs</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Woof</title>
   <link rel="stylesheet" type="text/CSS" href="./style.css" />
-  <!-- dont forget the meta tag for responsiveness -->
 </head>
 
 <body>
@@ -17,7 +18,7 @@
     </div>
 
     <div class="header-text">
-      <h1>DOGS</h1>
+      <h1>Woof!</h1>
     </div>
 
     <nav>
@@ -38,7 +39,6 @@
             alt="Dog and human in nature" class="photo">
         </a>
       </div>
-      </div>
       <div class="big-news-textbox">
         <a href="#">
           <h2>Oldest dog alive</h2>
@@ -49,11 +49,7 @@
             commodo
             consequat.<br><br>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-            incididunt ut labore et
-            dolore
-            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-            commodo
-            consequat.</p>
+            incididunt ut</p>
         </a>
       </div>
     </section>
@@ -143,7 +139,7 @@
   </main>
 
   <footer>
-    <p>DOGS - Just wanna have fun. All rights reserved. These news are written for dogs.</p>
+    <p>Woof! Dogs, Just wanna have fun. All rights reserved. These news are written for dogs.</p>
   </footer>
 
 </body>
